# motorscrape.app

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLATFORM_AUDIT.md  README.md  install.sh  test_mc.py  test_supabase.py  vercel.json
backend/: .coverage  .dockerignore  Dockerfile  audi_ann_arbor.html  audi_ann_arbor_httpx.html  audi_ann_arbor_pw.html  audi_ann_arbor_pw_headful.html  audi_ann_arbor_zenrows.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_mc.py  test_mc_history.py  test_mc_recalls.py
backend/app/: __init__.py  config.py  main.py  routing.py  schemas.py  sse.py  tiers.py
backend/app/api/: __init__.py  deps.py  routes_admin.py  routes_alerts.py  routes_auth.py  routes_billing.py  routes_dealers.py  routes_saved_searches.py  routes_search_logs.py  routes_vehicles.py  search_quota.py
backend/app/auth/: session.py
backend/scripts/: check_dependency_alignment.py
backend/tests/: conftest.py  test_accounts.py  test_alerts.py  test_api.py  test_black_book_valuation.py  test_dealer_platforms.py  test_dealer_score_store.py  test_inventory_discovery.py  test_inventory_filters.py  test_inventory_history.py  test_inventory_result_cache.py  test_marketcheck.py  test_orchestrator.py  test_orchestrator_utils.py  test_parser.py  test_places.py  test_playwright_fetch.py  test_provider_extractors.py  test_provider_router.py  test_saved_searches.py  test_scrape_logging.py  test_scraper_express.py  test_scraper_fetch.py  test_search_log_summary.py  test_sse_keepalive.py  test_supabase_store.py  test_vin_decoder.py
(+191 files in other folders)
