[project]
name = "motorscrape"
version = "0.1.0"
description = "Motorscrape backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "openai==1.59.7",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "playwright==1.49.1",
    "itsdangerous==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "stripe==11.5.0",
    "supabase==2.28.3"
]

[tool.ruff]
target-version = "py311"
line-length = 160
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
